CHANGELOG
=========

DarkElements version 2.1 - december 2014
- file functions: added title-tag
- updated the reset stylesheet
- fixed width of footer widgets
- adjusted styling of several tags
- reordered and cleaned up files style and custom-editor-style
- reordered php files

DarkElements version 1.9 - november 2014 
- first stable release

