@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 2.1
+Version: 2.2
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme. Sidebar on left side, left side navigation, 3 widget-area's in footer, custom header-image, custom background and display logo or blogname and description are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
@@ -15,7 +15,8 @@ DarkElements is licensed under the GPL
 */
 
 
-/* RESET STYLESHEET 
+/* 
+RESET STYLESHEET 
 Source: http://meyerweb.com/eric/tools/css/reset
 Author: Eric Meyer
 Author URI: http://meyerweb.com/ 
@@ -38,7 +39,6 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	vertical-align:baseline;
 }
 
-/* RESET OF HTML AND HTML5 TAGS FOR OLDER BROWSERS */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section {
 	display:block;
 }
@@ -94,7 +94,7 @@ sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; color:#e77776;}
 cite, em, abbr, acronym {font-style:italic;}
 code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #444; word-wrap:break-word; border-radius:5px; -moz-border-radius:5px;}
-blockquote, q {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:1px solid #e77776;}
+blockquote, q {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:1px solid #ddd;}
 address {margin:10px 0; padding:0 0 0 10px; display:block; font-size:1.2em; line-height:1.5em; border-left:1px solid #ddd;}
 p {margin:0 0 10px; text-align:justify;}
 
